# napari-timelapse-processor

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_timelapse_processor/: __init__.py  frame_by_frame.py  napari.yaml  timelapse_converter.py
src/napari_timelapse_processor/_tests/: conftest.py  test_frame_by_frame.py  test_timelapse_converter.py
